# SCRAPY

./: .env.example  .envrc  .gitignore  =0.1.0  =8.0.0  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py  dependencies.py
api/routes/: __init__.py  jobs.py
src/: __init__.py
src/core/: __init__.py  config.py  engine.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/extractors/: __init__.py  base.py  documents.py  web.py
src/models/: __init__.py  jobs.py  schemas.py
src/services/: __init__.py  apify_service.py  callback_service.py  job_service.py
src/utils/: __init__.py  exceptions.py  files.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/test_extractors/: test_web.py
